--- a/app.css
+++ b/app.css
@@ -12,7 +12,7 @@
 }
 .heading{
     align-items: center;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 700;
     margin-top: 50px;
 }
@@ -120,11 +120,17 @@
         margin-left: 0;
         margin-top: 20px; 
     }
+    .heading{
+        font-size: 10px;
+    }
 }
 @media (min-width: 768px) and (max-width: 1023px) {
     .product-items {
         flex-basis: 48%; 
         margin-left: 1%; 
         margin-top: 20px; 
+    }
+    .heading{
+        font-size: 10px;
     }
 }
