--- a/app.css
+++ b/app.css
@@ -120,6 +120,9 @@
         margin-left: 0;
         margin-top: 20px; 
     }
+    .product-items .price{
+        font-size: 12px;
+    }
     .heading{
         font-size: 10px;
     }
@@ -129,6 +132,9 @@
         flex-basis: 48%; 
         margin-left: 1%; 
         margin-top: 20px; 
+    }
+    .product-items .price{
+        font-size: 12px;
     }
     .heading{
         font-size: 10px;
